# BoQ-RAG

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
notebooks/: sample_boq.ipynb
src/: config.py  data_loader.py  query.py  vector_store_manager.py
